2025 fixes